fixed margins on mobile view for portfolio library header

--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ main {
 
 .portfolio-header {
     width: 100%;
-    margin: 1% 0%;
+    margin: 1% 2%;
     text-align: center;
     font-size: 1.5em;
 }
